# HunspellQtExample

./: README.md
HunspellExampleApp/: CMakeLists.txt
HunspellExampleApp/DemoApp/: CMakeLists.txt  main.cpp
HunspellExampleAppWidget/: CMakeLists.txt
